--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="196x196" href="/favicon-196.png" />
     <link rel="apple-touch-icon" href="/apple-icon-180.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=false" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
